# simple-social-media-app

./: .env.example  .gitignore  README.md  docker-compose.yaml  dummy.txt  main.py  pathlib_output.py  pyproject.toml  requirements.txt
.github/workflows/: ghcr-build.yml  ghcr-deploy.yml  ubuntu-python-tests.yml  windows-python-tests.yml
backend/: Dockerfile  add_post.py  init_db.py  main.py  user_crud.py  user_endpoints.py
backend/models/: post.py  user.py
backend/routes/: user_crud.py  user_endpoints.py
backend/routes/crud/: post_crud.py  posts_crud.py  user_crud.py  users_crud.py
backend/routes/doc/: openapi_post_spec.yaml  openapi_user_spec.yaml
backend/routes/endpoints/: post_routes.py  user_routes.py
backend/tests/: test_db.py
backend/uploads/: bewusstsein-schoene-bilder-pixabay.avif
backend/utils/: rabbitmq_utils.py
frontend/: Dockerfile  index.html
frontend/app/: index.html  package-lock.json  package.json
frontend/app/src/: App.tsx  PostFormular.tsx  PostList.tsx  UserFormular.tsx  UserList.css  UserList.tsx
frontend/src/: App.css  App.jsx  main.jsx
frontend/src/api/: post.js  user.js
frontend/src/components/: PostForm.jsx  PostList.jsx  README.txt  UserForm.jsx  UserList.jsx
image_resizer/: Dockerfile  resizer.py  test_image_resizer.py  test_resizer.py
sentiment_service/: Dockerfile  sentiment_requirements.txt  sentimentalizer.py  test_sentimentalizer.py
tests/: __init__.py  pytest.ini  test_db.py  test_post.py  test_user.py
text_generator_service/: Dockerfile  text_generator.py  text_generator_requirements.txt
(+2 files in other folders)
